finished css nav

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <!-- Header -->
         <header>
-            <img src="img/lambda-black.png" alt="Lambda Logo">
+            <img class="logo" src="img/lambda-black.png" alt="Lambda Logo">
 
             <nav>
                 <a href="#">Home</a>
