added hero markup

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
             </nav>
         </header>
 
+        <!-- Hero -->
+        <section class="hero">
+            <img src="img/jumbo.jpg" alt="Home hero">
+        </section>
+
+        <!-- Content -->
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
@@ -81,6 +87,7 @@
 
         </section>
 
+        <!-- Footer -->
         <footer>
             <nav>
                 <a href="#">Home</a>
@@ -90,7 +97,7 @@
                 <a href="#">Contact</a>
             </nav>
         </footer>
-    </div><!-- container -->
+    </div><!-- .container -->
 </body>
 
 </html>
