--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
 <body>
   <div class="container about-page">
 
+    <!-- Header -->
     <header>
       <img class="logo" src="img/lambda-black.png" alt="Lambda Logo">
 
@@ -27,16 +28,24 @@
       </nav>
     </header>
 
+    <!-- Hero -->
     <section class="hero">
       <img src="img/jumbo-about.png" alt="Home hero">
     </section>
 
-    About
+    <section class="top-content about-page">
+      <div class="text-container">
+        <h2>About</h2>
 
-    Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate
-    strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic
-    world view of disruptive innovation via workplace diversity and empowerment.
-
+        <p>
+          Leverage agile frameworks to provide a robust synopsis for
+          high level overviews. Iterative approaches to corporate strategy
+          foster collaborative thinking to further the overall value
+          proposition. Organically grow the holistic world view of disruptive
+          innovation via workplace diversity and empowerment.
+        </p>
+      </div>
+    </section>
 
     <img src="img/about-plan.png" alt="strategy">
 
