added about section css

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     </section>
 
     <section class="top-content about-page">
-      <div class="text-container">
+      <div class="text-container-about">
         <h2>About</h2>
 
         <p>
