--- a/about.html
+++ b/about.html
@@ -33,6 +33,7 @@
       <img src="img/jumbo-about.png" alt="Home hero">
     </section>
 
+    <!-- About Section -->
     <section class="top-content about-page">
       <div class="text-container-about">
         <h2>About</h2>
@@ -47,48 +48,61 @@
       </div>
     </section>
 
-    <img src="img/about-plan.png" alt="strategy">
+    <!-- Main Content -->
+    <section class="middle-content-about">
+      <div>
+        <img src="img/about-plan.png" alt="strategy" />
+        <h2>Strategy</h2>
+        <p>
+          Iterative approaches to corporate strategy foster
+          collaborative thinking to further the overall value proposition.
+        </p>
+        <button>Learn More</button>
+      </div>
 
-    Strategy
+      <div>
+        <img src="img/about-working.png" alt="strategy" />
+        <h2>How We Work</h2>
+        <p>
+          Iterative approaches to corporate strategy foster
+          collaborative thinking to further the overall value proposition.
+        </p>
+        <button>Learn More</button>
+      </div>
 
-    Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
+      <div>
+        <img src="img/about-office.png" alt="strategy" />
 
-    Learn More
+        <h2>
+          Places We Work
+        </h2>
+        <p>
+          Iterative approaches to corporate strategy foster
+          collaborative thinking to further the overall value proposition.
+        </p>
+        <button>Learn More</button>
+      </div>
 
+      <div>
+        <img src="img/about-meeting.png" alt="strategy" />
 
+        <h2>Collaboration Iterative </h2>
+        <p>
+          approaches to corporate strategy foster
+          collaborative thinking to further the overall value proposition.
+        </p>
+        <button>Learn More</button>
+      </div>
+    </section>
 
-    <img src="img/about-working.png" alt="strategy">
-
-    How We Work
-
-    Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
-
-    Learn More
-
-
-
-    <img src="img/about-office.png" alt="strategy">
-
-    Places We Work
-
-    Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
-
-    Learn More
-
-    <img src="img/about-meeting.png" alt="strategy">
-
-    Collaboration
-
-    Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
-
-    Learn More
-
+    <!-- W2T Pitch -->
     Let's Work Together
 
     Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate
     strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic
     world view of disruptive innovation via workplace diversity and empowerment.
 
+    <!-- Footer -->
     <footer>
       <nav>
         <a href="index.html">Home</a>
