--- a/about.html
+++ b/about.html
@@ -96,11 +96,17 @@
     </section>
 
     <!-- W2T Pitch -->
-    Let's Work Together
+    <section class="bottom-content-about">
+      <h2>Let's Work Together</h2>
 
-    Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate
-    strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic
-    world view of disruptive innovation via workplace diversity and empowerment.
+      <p>
+        Leverage agile frameworks to provide
+        a robust synopsis for high level overviews. Iterative approaches to
+        corporate strategy foster collaborative thinking to further the
+        overall value proposition. Organically grow the holistic world view
+        of disruptive innovation via workplace diversity and empowerment.
+      </p>
+    </section>
 
     <!-- Footer -->
     <footer>
