changed conflicting css and finished work together pitch css

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="container about-page">
+  <div class="container">
 
     <!-- Header -->
     <header>
@@ -34,8 +34,8 @@
     </section>
 
     <!-- About Section -->
-    <section class="top-content about-page">
-      <div class="text-container-about">
+    <section class="top-content-about">
+      <div class="text-container">
         <h2>About</h2>
 
         <p>
