--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="products.html">Products</a>
-        <a href="#">Blog</a>
+        <a href="contact.html">Blog</a>
         <a href="#">Contact</a>
       </nav>
     </header>
